2005-11-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/types.c (igraph_trie_size) : new
	* src/foreign.c (igraph_read_graph_lgl, igraph_write_graph_lgl) : new
	* src/foreign.c (igraph_write_graph_ncol) : memory leak corrected
	* igraph/src/rinterface.c (R_igraph_read_graph_lgl)
	(R_igraph_write_graph_lgl) : interface
	* igraph/R/foreign.R (read.graph.lgl, write.graph.lgl) : interface

2005-11-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/types.c (igraph_i_trie_init_node, igraph_trie_init)
	(igraph_i_trie_destroy_node, igraph_trie_destroy)
	(igraph_i_strdiff, igraph_trie_get_node, igraph_trie_get)
	(igraph_trie_get2, igraph_trie_idx) : new, Patricia trie data type
	* src/foreign-ncol-lexer.l : parser for the ncol file type
	* src/foreign-ncol-parser.y : parser for the ncol file type
	* src/foreign.c (igraph_read_graph_ncol, igraph_write_graph_ncol) :
	new file format added
	* igraph/src/rinterface.c (R_igraph_read_graph_ncol)
	(R_igraph_write_graph_ncol) : interface
	* igraph/R/foreign.R (read.graph.ncol, write.graph.ncol) : interface
	* igraph/R/foreign.R (read.graph, write.graph, read.graph.edgelist)
	(write.graph.edgelist, write.graph.lgl) : don't pass "format" argument
	
2005-11-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_edgelist)
	(igraph_write_graph_edgelist) : new
	* igraph/src/rinterface.c (R_igraph_read_graph_edgelist)
	(R_igraph_write_graph_edgelist) : R interface
	* igraph/R/foreign.R (read.graph.edgelist, write.graph.edgelist) :
	  R interface

2005-10-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* igraph/src/rinterface.c (R_igraph_set_vertex_attributes)
	(R_igraph_set_edge_attributes) : there is no type argument any more

2005-10-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/types.c (vector_e_ptr, vector_remove, vector_permdelete)
	(vector_remove_negidx, vector_ptr_free_all, vector_ptr_destroy_all)
	: new
	* src/types.c (igraph_attribute_list_init)
	(igraph_attribute_list_destroy, igraph_attribute_list_add)